# black

./: .gitignore  README.md  app.py  pyproject.toml
templates/: index.html
